modified:   16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
@@ -149,7 +149,22 @@
     }
    },
    "source": [
-    "#### Properties"
+    "##### `LinkedList<T>`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Properties"
    ]
   },
   {
@@ -196,21 +211,6 @@
     "\t</td>\n",
     "        \t</tr>\n",
     "\t</tbody></table>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
    ]
   },
   {
@@ -272,21 +272,6 @@
     "\t</td>\n",
     "        \t</tr>\n",
     "\t</tbody></table>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
    ]
   },
   {
@@ -559,6 +544,244 @@
     "</td>\n",
     "\t<td class=\"summary\"> \n",
     "\t\t<p>Removes the node at the end of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlist-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedList&lt;T&gt;</a>.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t<td class=\"is-one-third-width-tablet\">\n",
+    "\t\t<span class=\"break-text\">\n",
+    "\t\t\t  <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object.tostring?view=net-7.0#system-object-tostring\" data-linktype=\"relative-path\">To<wbr>String()</a>\n",
+    "\t\t</span>\n",
+    "\t</td>\n",
+    "\t<td class=\"summary\">\n",
+    "\t\t  <p>Returns a string that represents the current object.</p>\n",
+    "\t\t(Inherited from   <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>)\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `LinkedListNode<T>`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Properties"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 2\">\n",
+    "        \t<tbody><tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.list?view=net-7.0#system-collections-generic-linkedlistnode-1-list\" data-linktype=\"relative-path\">List</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Gets the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlist-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedList&lt;T&gt;</a> that the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedListNode&lt;T&gt;</a> belongs to.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.next?view=net-7.0#system-collections-generic-linkedlistnode-1-next\" data-linktype=\"relative-path\">Next</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Gets the next node in the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlist-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedList&lt;T&gt;</a>.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.previous?view=net-7.0#system-collections-generic-linkedlistnode-1-previous\" data-linktype=\"relative-path\">Previous</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Gets the previous node in the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlist-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedList&lt;T&gt;</a>.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.value?view=net-7.0#system-collections-generic-linkedlistnode-1-value\" data-linktype=\"relative-path\">Value</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Gets the value contained in the node.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr data-moniker=\" net-5.0 net-6.0 net-7.0 \">\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.valueref?view=net-7.0#system-collections-generic-linkedlistnode-1-valueref\" data-linktype=\"relative-path\">Value<wbr>Ref</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Gets a reference to the value held by the node.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Constructors"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 1\">\n",
+    "        \t<tbody><tr>\n",
+    "\t  <td class=\"is-one-third-width-tablet\">\n",
+    "\t<span class=\"break-text\">\n",
+    "\t\t<a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1.-ctor?view=net-7.0#system-collections-generic-linkedlistnode-1-ctor(-0)\" data-linktype=\"relative-path\">Linked<wbr>List<wbr>Node&lt;T&gt;(T)</a>\n",
+    "\t</span>\n",
+    "</td>\n",
+    "\t<td class=\"summary\"> \n",
+    "\t\t<p>Initializes a new instance of the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.linkedlistnode-1?view=net-7.0\" data-linktype=\"relative-path\">LinkedListNode&lt;T&gt;</a> class, containing the specified value.</p>\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "\t</tbody></table>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<table class=\"nameValue table table-sm table-stacked-mobile\" aria-label=\"Table 3\">\n",
+    "        \t<tbody><tr>\n",
+    "\t<td class=\"is-one-third-width-tablet\">\n",
+    "\t\t<span class=\"break-text\">\n",
+    "\t\t\t  <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object.equals?view=net-7.0#system-object-equals(system-object)\" data-linktype=\"relative-path\">Equals(Object)</a>\n",
+    "\t\t</span>\n",
+    "\t</td>\n",
+    "\t<td class=\"summary\">\n",
+    "\t\t  <p>Determines whether the specified object is equal to the current object.</p>\n",
+    "\t\t(Inherited from   <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>)\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t<td class=\"is-one-third-width-tablet\">\n",
+    "\t\t<span class=\"break-text\">\n",
+    "\t\t\t  <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object.gethashcode?view=net-7.0#system-object-gethashcode\" data-linktype=\"relative-path\">Get<wbr>Hash<wbr>Code()</a>\n",
+    "\t\t</span>\n",
+    "\t</td>\n",
+    "\t<td class=\"summary\">\n",
+    "\t\t  <p>Serves as the default hash function.</p>\n",
+    "\t\t(Inherited from   <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>)\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t<td class=\"is-one-third-width-tablet\">\n",
+    "\t\t<span class=\"break-text\">\n",
+    "\t\t\t  <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object.gettype?view=net-7.0#system-object-gettype\" data-linktype=\"relative-path\">Get<wbr>Type()</a>\n",
+    "\t\t</span>\n",
+    "\t</td>\n",
+    "\t<td class=\"summary\">\n",
+    "\t\t  <p>Gets the <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.type?view=net-7.0\" data-linktype=\"relative-path\">Type</a> of the current instance.</p>\n",
+    "\t\t(Inherited from   <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>)\n",
+    "\t</td>\n",
+    "        \t</tr>\n",
+    "        \t<tr>\n",
+    "\t<td class=\"is-one-third-width-tablet\">\n",
+    "\t\t<span class=\"break-text\">\n",
+    "\t\t\t  <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object.memberwiseclone?view=net-7.0#system-object-memberwiseclone\" data-linktype=\"relative-path\">Memberwise<wbr>Clone()</a>\n",
+    "\t\t</span>\n",
+    "\t</td>\n",
+    "\t<td class=\"summary\">\n",
+    "\t\t  <p>Creates a shallow copy of the current <a class=\"no-loc\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>.</p>\n",
+    "\t\t(Inherited from   <a class=\"xref\" href=\"https://learn.microsoft.com/en-us/dotnet/api/system.object?view=net-7.0\" data-linktype=\"relative-path\">Object</a>)\n",
     "\t</td>\n",
     "        \t</tr>\n",
     "        \t<tr>\n",
@@ -1055,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1115,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1172,6 +1395,169 @@
    "source": [
     "doublyLinkedIntegerList.Last.Value"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We do, however, have multiple Insertion options for specifying the last position at which we desire the insertion to take place:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// Insert at the head of the list\n",
+    "// \n",
+    "\n",
+    "doublyLinkedIntegerList.AddFirst( 99 ).List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "doublyLinkedIntegerList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
