modified:   16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
@@ -1129,9 +1129,9 @@
     }
    },
    "source": [
-    "Unlike the `ArrayList` and `List<T>` classes, the `LinkedList<T>` is only capable of performing individual insert operations.   \n",
+    "Unlike the `ArrayList` and `List<T>` classes, the `LinkedList<T>` is only capable of performing individual Insert operations.   \n",
     "   \n",
-    "So if it our goal add a sequence of consecutive integer value to end of our `doublyLinkedIntegerList` we must do so in an iterative pattern: "
+    "So, if it's our goal add a sequence of consecutive integer value to end of our `doublyLinkedIntegerList` we must do so in an iterative pattern: "
    ]
   },
   {
@@ -1423,12 +1423,12 @@
     }
    },
    "source": [
-    "We do, however, have multiple Insertion options for specifying the last position at which we desire the insertion to take place:"
+    "We do, however, have multiple Insertion and Search options for specifying the position at which we desire the insertion to take place:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1444,7 +1444,7 @@
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr></tbody></table><style>\r\n",
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -1483,15 +1483,13 @@
     }
    ],
    "source": [
-    "// Insert at the head of the list\n",
-    "// \n",
-    "\n",
+    "// Insert the value 99 at the head of the list\n",
     "doublyLinkedIntegerList.AddFirst( 99 ).List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1503,14 +1501,56 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "doublyLinkedIntegerList"
+    "// Insert the value 99 at the tail of the list\n",
+    "doublyLinkedIntegerList.AddLast( 99 ).List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1522,12 +1562,56 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr><tr><td>9</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// Insert the value 99 Before the First occurence of a node containing the value 3\n",
+    "doublyLinkedIntegerList.AddBefore( doublyLinkedIntegerList.Find( 3 ), 99 ).List"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1539,25 +1623,52 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>1</td><td><div class=\"dni-plaintext\"><pre>1</pre></div></td></tr><tr><td>2</td><td><div class=\"dni-plaintext\"><pre>2</pre></div></td></tr><tr><td>3</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>4</td><td><div class=\"dni-plaintext\"><pre>3</pre></div></td></tr><tr><td>5</td><td><div class=\"dni-plaintext\"><pre>4</pre></div></td></tr><tr><td>6</td><td><div class=\"dni-plaintext\"><pre>5</pre></div></td></tr><tr><td>7</td><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr><tr><td>8</td><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr><tr><td>9</td><td><div class=\"dni-plaintext\"><pre>99</pre></div></td></tr><tr><td>10</td><td><div class=\"dni-plaintext\"><pre>999</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "// Insert the value 999 After the Last occurence of a node containing the value 99\n",
+    "doublyLinkedIntegerList.AddAfter( doublyLinkedIntegerList.FindLast( 99 ), 999 ).List"
+   ]
   }
  ],
  "metadata": {
