modified:   16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb Changes not staged for commit: deleted:    16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb Untracked files: 16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb
@@ -21,7 +21,7 @@
    },
    "source": [
     "## Built-In Classes\n",
-    "### The `LinkedList<T>` Class\n",
+    "### The `LinkedList<T>` and `LinkedListNode<T>` Classes\n",
     "---"
    ]
   },
