renamed:    16. Linear Data Structures/Built-In Classes/The LinkedList Class.ipynb -> 16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb

--- a/16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb
+++ b/16. Linear Data Structures/Built-In Classes/The LinkedList and LinkedListNode Classes.ipynb
@@ -3,7 +3,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 16. Linear Data Stuctures"
    ]
@@ -1684,6 +1691,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
